--- a/index.html
+++ b/index.html
@@ -12,37 +12,68 @@
   <!-- Place favicon.ico in the root directory -->
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  
+  <link rel="stylesheet" href="style.css">
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+  <header class="header">
+    <div class="main-title">Quiz I know</div>
+  <ul class="menu">
+    <li class="menu-item"><a href="top.html" class="menu-item-link">HOME</a></li>
   
+    <div class="user_nav grid-6">
+     </div>
+      <li class="menu-item">
+      <a class="menu-item-link menu-item-link-btn" href="index.html">クイズに挑戦</a>
+    </li>
+  </ul>
+
+  <nav class="sp-nav">
+    <ul>
+      <li class="menu-item"><a href="top.html" class="menu-item-link">HOME</a></li>
+  
+      <div class="user_nav grid-6">
+       </div>
+        <li class="menu-item">
+        <a class="menu-item-link menu-item-link-btn" href="index.html">クイズに挑戦</a>
+      </li>
+      <li class="close"><span>閉じる</span></li>
+   </ul>
+  </nav>
+  <div id="hamburger">
+   <span></span>
+  </div>
+</header>
+<div class="mode-choice-name">
+  <div class="mode-choice">簡単モード</div>
   <div class="container">
-    
     <div class="jumbotron mt-5">
       <div class="d-flex justify-content-center">
-        <div id="js-question" class="alert alert-primary" role="alert">
-          A simple primary alert—check it out!
+        <div id="js-question" class="alert alert-danger" role="alert">
+          A simple danger alert—check it out!
         </div>
       </div>
+
       
       <div id="js-items" class="d-flex justify-content-center">
         <div class="m-2">
-          <button type="button" id="js-btn-1" class="btn btn-primary">Primary</button>
+          <button type="button" id="js-btn-1" class="btn btn-danger">Danger</button>
         </div>
         <div class="m-2">
-          <button type="button" id="js-btn-2" class="btn btn-primary">Primary</button>
+          <button type="button" id="js-btn-2" class="btn btn-danger">Danger</button>
         </div>
         <div class="m-2">
-          <button type="button" id="js-btn-3" class="btn btn-primary">Primary</button>
+          <button type="button" id="js-btn-3" class="btn btn-danger">Danger</button>
         </div>
         <div class="m-2">
-          <button type="button" id="js-btn-4" class="btn btn-primary">Primary</button>
+          <button type="button" id="js-btn-4" class="btn btn-danger">Danger</button>
         </div>
       </div>
     </div>
   </div>
+
+  <a href="top.html">トップページへ戻る</a>
   
   <script src="app.js"></script>
 </body>
