--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="header">
-    <div class="main-title">Quiz I know</div>
+    <a href="start.html" div class="main-title">Quiz I know</a>
   <ul class="menu">
     <li class="menu-item"><a href="top.html" class="menu-item-link">HOME</a></li>
   
