--- a/top.html
+++ b/top.html
@@ -18,7 +18,7 @@
 
 
     <header class="header">
-        <div class="main-title">Quiz I know</div>
+        <a href="start.html" div class="main-title">Quiz I know</a>
       <ul class="menu">
         <li class="menu-item"><a href="start.html" class="menu-item-link">HOME</a></li>
   
@@ -31,11 +31,13 @@
   
       <nav class="sp-nav">
         <ul>
-          <li><a href="/contact/:id">愛好会概要</a></li>
-          <li><a href="/posts/list">投稿一覧</a></li>
-          <li><a href="/contact" class="menu-item-link">お問い合わせ</a></li>
-          <li><a href="/posts/new">成果報告</a></li>
-
+          <li class="menu-item"><a href="top.html" class="menu-item-link">HOME</a></li>
+      
+          <div class="user_nav grid-6">
+           </div>
+            <li class="menu-item">
+            <a class="menu-item-link menu-item-link-btn" href="index.html">クイズに挑戦</a>
+          </li>
           <li class="close"><span>閉じる</span></li>
        </ul>
       </nav>
@@ -52,7 +54,9 @@
             <a href="index.html" class="btn btn--orange">普通モード（10問）</a>
             <a href="index.html" class="btn btn--orange">難問モード（5問）</a>
         </div>
-        <div class="easy-quiz"></div>
+        <div class="mode-select">
+            <a href="start.html" button type="button" class="btn btn-secondary">スタート画面に戻る</a>
+        </div>
     </body>
       <footer class="footer">
         <p class="copyright">Copyright © 2020 div Inc.Muscle Training CLUB All rights reserved.</p>
