簡単・普通モード追加

--- a/start.html
+++ b/start.html
@@ -46,13 +46,14 @@
       </div>
     </header>
     <body>
+        <div class="background-tag">
         <div class="mode-choice-name">
-            <div class="mode-choice">●●クイズ王</div>
+            <div class="mode-choice">雑学クイズ王</div>
           </div>
         <div class="mode-select">
             <a href="top.html" class="btn start-btn--orange">スタート！</a>
         </div>
-        <div class="easy-quiz"></div>
+        </div>
     </body>
       <footer class="footer">
         <p class="copyright">Copyright © 2020 div Inc.Muscle Training CLUB All rights reserved.</p>
