--- a/top.html
+++ b/top.html
@@ -46,16 +46,18 @@
       </div>
     </header>
     <body>
+        <div class="background-tag">
         <div class="mode-choice-name">
-            <div class="mode-choice">●●クイズ王</div>
+            <div class="mode-choice">雑学クイズ王</div>
           </div>
         <div class="mode-select">
             <a href="index.html" class="btn btn--orange">簡単モード（10問）</a>
-            <a href="index.html" class="btn btn--orange">普通モード（10問）</a>
+            <a href="medium.html" class="btn btn--orange">普通モード（10問）</a>
             <a href="index.html" class="btn btn--orange">難問モード（5問）</a>
         </div>
         <div class="mode-select">
             <a href="start.html" button type="button" class="btn btn-secondary">スタート画面に戻る</a>
+        </div>
         </div>
     </body>
       <footer class="footer">
