--- a/medium.html
+++ b/medium.html
@@ -36,7 +36,7 @@
       <div class="user_nav grid-6">
        </div>
         <li class="menu-item">
-        <a class="menu-item-link menu-item-link-btn" href="index.html">クイズに挑戦</a>
+        <a class="menu-item-link menu-item-link-btn" href="top.html">クイズに挑戦</a>
       </li>
       <li class="close"><span>閉じる</span></li>
    </ul>
@@ -46,7 +46,7 @@
   </div>
 </header>
 <div class="mode-choice-name">
-  <div class="mode-choice">簡単モード</div>
+  <div class="mode-choice">普通モード</div>
   <div class="container">
     <div class="jumbotron mt-5">
       <div class="d-flex justify-content-center">
@@ -75,7 +75,7 @@
 
   <a href="top.html">トップページへ戻る</a>
   
-  <script src="app.js"></script>
+  <script src="medium.js"></script>
 </body>
 
 </html>
