--- a/top.html
+++ b/top.html
@@ -53,7 +53,7 @@
         <div class="mode-select">
             <a href="index.html" class="btn btn--orange">簡単モード（10問）</a>
             <a href="medium.html" class="btn btn--orange">普通モード（10問）</a>
-            <a href="index.html" class="btn btn--orange">難問モード（5問）</a>
+            <a href="parsonal.html" class="btn btn--orange">越川モード（5問）</a>
         </div>
         <div class="mode-select">
             <a href="start.html" button type="button" class="btn btn-secondary">スタート画面に戻る</a>
