レスポンシブタブ修正

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       </div>
     </div>
   </div>
-
-  <a href="top.html">トップページへ戻る</a>
-  
+  <div class="mode-select">
+   <a href="top.html" button type="button" class="btn btn-secondary">トップページへ戻る</a>
+  </div>
   <script src="app.js"></script>
 </body>
 
