--- a/medium.html
+++ b/medium.html
@@ -47,6 +47,7 @@
 </header>
 <div class="mode-choice-name">
   <div class="mode-choice">普通モード</div>
+</div>
   <div class="container">
     <div class="jumbotron mt-5">
       <div class="d-flex justify-content-center">
