--- a/medium.html
+++ b/medium.html
@@ -36,7 +36,7 @@
       <div class="user_nav grid-6">
        </div>
         <li class="menu-item">
-        <a class="menu-item-link menu-item-link-btn" href="top.html">クイズに挑戦</a>
+        <a class="menu-item-link menu-item-link-btn" href="index.html">クイズに挑戦</a>
       </li>
       <li class="close"><span>閉じる</span></li>
    </ul>
@@ -73,9 +73,9 @@
       </div>
     </div>
   </div>
-
-  <a href="top.html">トップページへ戻る</a>
-  
+  <div class="mode-select">
+   <a href="top.html" button type="button" class="btn btn-secondary">トップページへ戻る</a>
+  </div>
   <script src="medium.js"></script>
 </body>
 
